--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,14 +2,15 @@
   "dependencies": {
     "com.unity.ide.rider": "3.0.21",
     "com.unity.netcode.gameobjects": "1.1.0",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "12.1.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.4",
+    "com.unity.xr.hands": "1.1.0-pre.3",
     "com.unity.xr.interaction.toolkit": "2.3.1",
     "com.unity.xr.management": "4.3.3",
     "com.unity.xr.oculus": "3.2.3",
     "com.unity.xr.openxr": "1.6.0",
-    "com.unity.xr.hands": "1.1.0-pre.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
