--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "3.0.21",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.netcode.gameobjects": "1.1.0",
     "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "12.1.8",
